@startuml
state ISSUED
state REVOKED
state SUSPENDED
[*] --> ISSUED : ISSUE
ISSUED --> SUSPENDED : SUSPEND\n
note on link
Suspend all accociated VCs
end note

ISSUED --> ISSUED : ISSUE
SUSPENDED --> ISSUED : ISSUE\n
note on link
Revalidate all accociated VCs
end note

ISSUED --> REVOKED : REVOKE\n
note on link
Revoke all accociated VCs
end note

SUSPENDED --> REVOKED : REVOKE\n
note on link
Revoke all accociated VCs
end note

REVOKED --> REVOKED : REVOKE
SUSPENDED --> SUSPENDED : SUSPEND
@enduml
